@@ -12,7 +12,7 @@ AddXML.boxplot = function(x, file) {
     root = XML::xmlRoot(doc)
     annotations = .AddXMLAddNode(root, "annotations")
 
-    title = .AddXMLAddTitle(annotations, title=x$main)
+    title = .AddXMLAddTitle(annotations, title=x$ExtraArgs$main)
 
     if (x$horizontal) {
       xValues <- x$xTicks
@@ -26,23 +26,23 @@ AddXML.boxplot = function(x, file) {
       YMax = max(yValues)
     }
     if (x$horizontal) {
-      xSpeech <- paste("x axis", x$xlab, "ranges from", YMin, "to", YMax)
+      xSpeech <- paste("x axis", x$ExtraArgs$xlab, "ranges from", YMin, "to", YMax)
       ySpeech <- paste("y axis with values", paste(yValues, collapse=", "))
     } else {
       xSpeech <- paste("x axis with values", paste(xValues, collapse=", "))
-      ySpeech <- paste("y axis", x$ylab, "ranges from", YMin, "to", YMax)
+      ySpeech <- paste("y axis", x$ExtraArgs$ylab, "ranges from", YMin, "to", YMax)
     }
 
 
-    xAxis = .AddXMLAddXAxis(annotations, label=x$xlab, values=xValues, speechLong=xSpeech)
+    xAxis = .AddXMLAddXAxis(annotations, label=x$ExtraArgs$xlab, values=xValues, speechLong=xSpeech)
 
-    yAxis = .AddXMLAddYAxis(annotations, label=x$ylab, values=yValues, speechLong=ySpeech)
+    yAxis = .AddXMLAddYAxis(annotations, label=x$ExtraArgs$ylab, values=yValues, speechLong=ySpeech)
 
     center = .AddXMLAddBoxplotCenter(annotations,boxplot=x)
 
     chart <- .AddXMLAddChart(annotations, type="BoxPlot",
-                    speech=paste(x$Boxplots, "for", x$main),
-                    speech2=paste(x$Boxplots, "for", x$xlab, paste(x$names, collapse=", ")),
+                    speech=paste(x$Boxplots, "for", x$ExtraArgs$main),
+                    speech2=paste(x$Boxplots, "for", x$ExtraArgs$xlab, paste(x$names, collapse=", ")),
                     children=list(title, xAxis, yAxis, center))
     .AddXMLAddComponents(chart, list(title, xAxis, yAxis, center))
     XML::saveXML(doc=doc, file=file)
@@ -54,8 +54,8 @@ AddXML.dotplot = function(x, file) {
     doc = .AddXMLDocument("dotplot")
     root = XML::xmlRoot(doc)
     annotations = .AddXMLAddNode(root, "annotations")
-    .AddXMLAddXAxis(annotations, label=x$xlab)
-    .AddXMLAddYAxis(annotations, label=x$ylab)
+    .AddXMLAddXAxis(annotations, label=x$ExtraArgs$xlab)
+    .AddXMLAddYAxis(annotations, label=x$ExtraArgs$ylab)
     XML::saveXML(doc=doc, file=file)
     return(invisible(NULL))
 }
@@ -73,8 +73,8 @@ AddXML.ggplot = function(x, file) {
     doc = .AddXMLDocument("ggplot")
     root = XML::xmlRoot(doc)
     annotations = .AddXMLAddNode(root, "annotations")
-    .AddXMLAddXAxis(annotations, label=x$xlab)
-    .AddXMLAddYAxis(annotations, label=x$ylab)
+    .AddXMLAddXAxis(annotations, label=x$ExtraArgs$xlab)
+    .AddXMLAddYAxis(annotations, label=x$ExtraArgs$ylab)
 
     XML::saveXML(doc=doc, file=file)
     return(invisible(NULL))
@@ -86,31 +86,31 @@ AddXML.histogram = function(x, file) {
     annotations = .AddXMLAddNode(root, "annotations")
 
 # still need to allow for main and sub titles
-    title = .AddXMLAddTitle(annotations, title=x$main)
+    title = .AddXMLAddTitle(annotations, title=x$ExtraArgs$main)
 
     xValues <- x$xTicks
     XMax = max(x$breaks, x$xTicks)
-    xAxis = .AddXMLAddXAxis(annotations, label=x$xlab, values=xValues,
-                            speechLong=paste("x axis", x$xlab, "ranges from 0 to", XMax))
+    xAxis = .AddXMLAddXAxis(annotations, label=x$ExtraArgs$xlab, values=xValues,
+                            speechLong=paste("x axis", x$ExtraArgs$xlab, "ranges from 0 to", XMax))
 
     AboveY = x$yTicks
     for(i in 1:length(x$yTicks)){
         AboveY[i] = length(x$counts[x$counts > x$yTicks[i] ])
     }
     yValues <- x$yTicks
-    DetYValues <- paste(AboveY, "of the", x$NBars, "bars exceed the", x$ylab, x$yTicks)
+    DetYValues <- paste(AboveY, "of the", x$NBars, "bars exceed the", x$ExtraArgs$ylab, x$yTicks)
     YMax = max(x$counts, x$yTicks)
-    yAxis = .AddXMLAddYAxis(annotations, label=x$ylab,
+    yAxis = .AddXMLAddYAxis(annotations, label=x$ExtraArgs$ylab,
                             values=yValues, detailedValues=DetYValues,
-                            speechLong=paste("y axis", x$ylab, "ranges from 0 to", YMax))
+                            speechLong=paste("y axis", x$ExtraArgs$ylab, "ranges from 0 to", YMax))
 
     center = .AddXMLAddHistogramCenter(annotations,hist=x)
 
     chart <- .AddXMLAddChart(annotations, type="Histogram",
-                    speech=paste("Histogram of", x$xlab),
+                    speech=paste("Histogram of", x$ExtraArgs$xlab),
                     speech2=paste("Histogram showing ", x$NBars, "bars for ",
-                                  x$xlab, "over the range", min(x$breaks),  
-                                  "to",max(x$breaks), "and", x$ylab,
+                                  x$ExtraArgs$xlab, "over the range", min(x$breaks),  
+                                  "to",max(x$breaks), "and", x$ExtraArgs$ylab,
                                   "from 0 to", max(x$counts)), # must allow for density
                     children=list(title, xAxis, yAxis, center))
     .AddXMLAddComponents(chart, list(title, xAxis, yAxis, center))
@@ -125,30 +125,30 @@ AddXML.tsplot = function(x, file) {
     annotations = .AddXMLAddNode(root, "annotations")
 
 # still need to allow for main and sub titles
-    title = .AddXMLAddTitle(annotations, title=x$main)
+    title = .AddXMLAddTitle(annotations, title=x$ExtraArgs$main)
 
     xValues <- x$xTicks
     XMin = min(x$xTicks)
     XMax = max(x$xTicks)
     xAxis = .AddXMLAddXAxis(
-        annotations, label=x$xlab, values=xValues,
-        speechLong=paste("x axis", x$xlab, "ranges from", XMin, "to", XMax))
+        annotations, label=x$ExtraArgs$xlab, values=xValues,
+        speechLong=paste("x axis", x$ExtraArgs$xlab, "ranges from", XMin, "to", XMax))
 
    yValues <- x$yTicks
     YMin = min(x$yTicks)
     YMax = max(x$yTicks)
     yAxis = .AddXMLAddYAxis(
-        annotations, label=x$ylab, values=yValues,
-        speechLong=paste("y axis", x$ylab, "ranges from", YMin, "to", YMax))
+        annotations, label=x$ExtraArgs$ylab, values=yValues,
+        speechLong=paste("y axis", x$ExtraArgs$ylab, "ranges from", YMin, "to", YMax))
 
     ## now to add the other content related bits
     center = .AddXMLAddTimeseriesCenter(annotations,ts=x)
 
     chart <- .AddXMLAddChart(annotations, type="TimeSeriesPlot",
-                    speech=paste("Time series plot of", x$ylab),
+                    speech=paste("Time series plot of", x$ExtraArgs$ylab),
                     speech2=paste("Time series plot showing ",
-                                  x$ylab, "over the range", YMin,
-                                  "to", YMax,  "for", x$ylab,
+                                  x$ExtraArgs$ylab, "over the range", YMin,
+                                  "to", YMax,  "for", x$ExtraArgs$ylab,
                                   "which ranges from", XMin,  "to", XMax), 
                     children=list(title, xAxis, yAxis, center))
     .AddXMLAddComponents(chart, list(title, xAxis, yAxis, center))
