@@ -23,5 +23,19 @@ Godfrey, A.J.R. (2013) \sQuote{Statistical Software from a Blind Person's Perspe
 \author{
 A. Jonathan R. Godfrey
 }
+\examples{
+attach(airquality)
+op = par(mfcol=c(3,2))
+plot(as.ts(Wind), ylab="Wind", col=4)
+test1 = TimeSeriesPlot(Wind, col=4)
+test1 #does the plot method work?
+plot(as.ts(Ozone), ylab="Ozone", lty=3)
+test2 = TimeSeriesPlot(Ozone, lty=3)
+test2 #does the plot method work?
+par(op)
+detach(airquality)
+rm(test1); rm(test2); rm(op)
+}
+
 
 
