@@ -49,7 +49,3 @@ MyBoxplot
 # The VI() method then uses the extra information stored
 VI(MyBoxplot)
 }
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
-\keyword{ ~kwd1 }
-\keyword{ ~kwd2 }% __ONLY ONE__ keyword per line
