@@ -5,6 +5,7 @@
 - JG implemented the ViewSVG() so that anyone can use the interactive graph viewing system; required various internal functions to move and write necessary files 
 - added FittedLinePlot() which adds a fitted line to the ScatterPlot() implmented through ScatterPlot(); these use a few internal functions, found in ScatterPlot.R
 - added plot and print methods for various graph types. The print method refers to the plot function so acts just like the ggplot and lattice packages.
+- restructured the storage of graph parameters and arguments for a variety of the masked functions. The intention is to make cleaning things up easier.
 
 # v0.25.6
 - working on accessible Venn diagrams and time series plots
